# DetectMateService

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.toml  settings.yaml  versions.json
.github/ISSUE_TEMPLATE/: 01_bug_report.md
.github/workflows/: docker.yml  publish-docs.yml  python-app.yml
0.0.1/: 404.html  index.html  search.html  sitemap.xml
0.0.1/configuration/: index.html
0.0.1/installation/: index.html
0.0.1/pipeline/: index.html
0.0.1/search/: search_index.json
0.0.1/usage/: index.html
0.1.0/: 404.html  index.html  search.html  sitemap.xml
0.1.0/configuration/: index.html
0.1.0/contribution/: index.html
0.1.0/development/: index.html
0.1.0/installation/: index.html
0.1.0/interfaces/: index.html
0.1.0/library-imports/: index.html
0.1.0/pipeline/: index.html
0.1.0/usage/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/configuration/: index.html
0.1.1/contribution/: index.html
0.1.1/development/: index.html
0.1.1/installation/: index.html
0.1.1/interfaces/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.3/: 404.html  index.html  sitemap.xml
0.1.4/: 404.html  index.html  sitemap.xml
0.1.5/: 404.html  index.html  sitemap.xml
0.1.6/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.1/: 404.html  index.html  sitemap.xml
0.2.2/: 404.html  index.html  sitemap.xml
0.2.3/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  search.html  sitemap.xml
0.3.2/: 404.html  index.html  sitemap.xml
0.3.3/: 404.html  index.html  sitemap.xml
container/: Dockerfile_fluentd  prometheus.yml
demo/: Dockerfile  docker-compose.yml  manual_demo_run_ipc.py  manual_demo_run_tcp.py
docs/: configuration.md  contribution.md  development.md  docker-compose.md  getting_started.md  index.md  installation.md  interfaces.md  library-imports.md  library.md  pipeline.md  prometheus.md  release.md  usage.md
examples/: service_settings.yaml
scripts/: change_toml.sh  client.py
src/service/: cli.py  (+5 more)
tests/: test_cli_args.py  test_cli_logging_setup.py  test_component_id.py  test_config_reading.py  test_engine_loop.py  test_engine_multi_output.py  test_engine_socket_factory_error_handling.py  test_manager_commands.py  test_manager_socket_error_handling.py  test_persistency_endpoints.py  test_pipeline_demos.py  test_reconfigure_params.py  test_service_multi_output_integration.py  test_smoke_service.py  test_tls_settings.py  test_tls_transport.py  test_training_state_endpoints.py
(+173 files in other folders)
